--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW2_on_conflict_do_update.yaml
@@ -64,9 +64,9 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr1 for the client" ]
                               -   util: PrimaryIntGen
-                                  params: [ 1, 1000000 ]
+                                  params: [ 1, 1000000]
 
 
             - workload: CW2_2_4column_condition_single_upsert
@@ -81,7 +81,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr2 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 1000001, 2000000]
 
@@ -98,7 +98,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr3 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 2000001, 3000000]
 
@@ -115,7 +115,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr4 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 3000001, 4000000]
 
@@ -132,7 +132,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr5 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 4000001, 5000000]
 
@@ -148,7 +148,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr6 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 5000001, 6000000]
 
@@ -159,86 +159,86 @@ microbenchmark:
                     queries:
                         - query: INSERT INTO accounts_1(user_id_1,account_id_1,addr_1,bal_1) VALUES (?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?),(?,?,?,?) ON CONFLICT (user_id_1, account_id_1) DO UPDATE SET (user_id_1,account_id_1,addr_1,bal_1)=(excluded.user_id_1,excluded.account_id_1,excluded.addr_1,excluded.bal_1)
                           bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 1, 500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 1, 500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr7 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 1, 500000]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 500001, 1000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 500001, 1000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr8 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 500001, 1000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 2000001, 2500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 2000001, 2500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr9 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 2000001, 2500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 2500001, 3000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 2500001, 3000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr10 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 2500001, 3000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3000001, 3500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3000001, 3500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr11 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3000001, 3500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3500001, 4000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3500001, 4000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr12 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3500001, 4000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4000001, 4500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4000001, 4500000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr13 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4000001, 4500000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4500001, 5000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4500001, 5000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr14 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4500001, 5000000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4250001, 4750000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4250001, 4750000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000 ]
+                                  params: [ "Addr15 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 4250001, 4750000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3250001, 3750000 ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3250001, 3750000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 6000000]
+                                  params: [ "Addr16 for the client" ]
+                              -   util: CyclicSeqIntGen
+                                  params: [ 3250001, 3750000 ]
 
             - workload: CW2_8_2column_condition_1_upsert_with_returning
               run:
@@ -252,7 +252,7 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr17 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 6000001, 7000000]
 
@@ -269,6 +269,6 @@ microbenchmark:
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000 ]
                               -   util: OneStringFromArray
-                                  params: [ "addr for the client" ]
+                                  params: [ "Addr18 for the client" ]
                               -   util: PrimaryIntGen
                                   params: [ 7000001, 8000000]
