--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW5_on_conflict_do_update.yaml
@@ -132,7 +132,7 @@ microbenchmark:
                         - query: INSERT INTO CW5_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: RandomNumber
+                              -   util: RandomUniqueIntGen
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
@@ -150,7 +150,7 @@ microbenchmark:
                         - query: INSERT INTO CW5_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
-                              -   util: RandomNumber
+                              -   util: RandomUniqueIntGen
                                   params: [ 4000001, 8000000 ]
                               -   util: RandomNumber
                                   params: [ 4000001, 8000000 ]
